Crash when opening operation menu inside Math node #115085

Closed
opened 2023-11-18 09:45:57 +01:00 by Sun Kim · 2 comments
Contributor

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2060 SUPER/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 545.84

Blender Version
Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-11-17 22:15, hash: 02bc43d08e1d
Worked: (newest version of Blender that worked as expected)

Short description of error

Blender crashes when try to open the operation selection menu in the Math node.

Maybe the similar issue with #115023?

**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2060 SUPER/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 545.84 **Blender Version** Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-11-17 22:15, hash: `02bc43d08e1d` Worked: (newest version of Blender that worked as expected) **Short description of error** Blender crashes when try to open the operation selection menu in the Math node. Maybe the similar issue with #115023?
Sun Kim added the
Status
Needs Triage
Priority
Normal
Type
Report
labels 2023-11-18 09:45:57 +01:00
Jacques Lucke added
Priority
High
and removed
Priority
Normal
labels 2023-11-18 12:53:23 +01:00
Member

Caused by 83ce3ef0db.

CC @Harley

Caused by 83ce3ef0db1da56822440a9475d93339d19cd5d2. CC @Harley
Jacques Lucke added
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-11-18 12:53:47 +01:00
Iliya Katushenock added the
Module
User Interface
label 2023-11-18 12:55:24 +01:00
Harley Acheson self-assigned this 2023-11-18 16:58:30 +01:00
Member

I see it.

It is something I hadn't noticed before. This list is multicolumn but it includes some section dividers without category names. Make sense and will have a solution shortly.

I see it. It is something I hadn't noticed before. This list is multicolumn but it includes some section dividers without category names. Make sense and will have a solution shortly.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-11-18 17:21:57 +01:00
Hans Goudey added
Type
Bug
and removed
Type
Report
labels 2023-11-18 21:55:27 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#115085
No description provided.